# intuitiveCare

./: .gitignore  README.md  Teste API.postman_collection.json
step1&2/: README.md  main.py  pyproject.toml
step1&2/adapters/: pdf_downloader.py  pdf_parser.py  zip_handler.py
step1&2/ports/: pdf_downloader_port.py  pdf_parser_port.py  zip_handler_port.py
step1&2/use_cases/: download_and_zip.py  download_extract_transform.py
step3/: README.md  db.sql
step4/: .env-example  README.md  main.py  pyproject.toml
step4/adapters/controller/: search_controller.py
step4/adapters/repository/: operator_repository.py
step4/domain/: operator.py
step4/ports/: operator_repository_port.py
step4/use_cases/: search_operators.py
step4/utils/: logger.py
vue/: README.md  index.html  package-lock.json
vue/src/: App.vue  style.css
vue/src/components/: DataTable.vue  Pagination.vue  SearchBar.vue
